--- a/packages/BackendAPI/packages/SmartContracts/package.json
+++ b/packages/BackendAPI/packages/SmartContracts/package.json
@@ -23,6 +23,7 @@
     "bignumber.js": "^9.0.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
+    "ethereumjs-util": "^6.2.0",
     "openzeppelin-solidity": "^2.5.0",
     "sleep": "^6.1.0"
   }
