--- a/packages/SmartContracts/JsMetacash/package.json
+++ b/packages/SmartContracts/JsMetacash/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://gitlab.com/lamarkaz/metacash.js#readme",
   "devDependencies": {
+    "nodemon": "^2.0.2",
     "prettier": "^1.17.0",
     "tslint": "^5.16.0",
     "tslint-config-prettier": "^1.18.0",
@@ -31,9 +32,11 @@
   "dependencies": {
     "axios": "^0.18.1",
     "bignumber.js": "^8.1.1",
+    "body-parser": "^1.19.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "ethers": "^4.0.27",
+    "express": "^4.17.1",
     "sleep": "^6.1.0"
   }
 }
