--- a/truffle/package.json
+++ b/truffle/package.json
@@ -24,6 +24,7 @@
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "ethereumjs-util": "^6.2.0",
+    "ethers": "^4.0.45",
     "openzeppelin-solidity": "^2.5.0",
     "sleep": "^6.1.0"
   }
