--- a/packages/BackendAPI/packages/SmartContracts/JsMetacash/package.json
+++ b/packages/BackendAPI/packages/SmartContracts/JsMetacash/package.json
@@ -7,7 +7,8 @@
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "lint": "tslint -p tsconfig.json",
     "build": "tsc",
-    "test": "tsc && mocha"
+    "test": "tsc && mocha",
+    "version": "tsc -v"
   },
   "repository": {
     "type": "git",
@@ -30,6 +31,7 @@
     "lib/**/*"
   ],
   "dependencies": {
+    "@types/express": "^4.17.3",
     "axios": "^0.18.1",
     "bignumber.js": "^8.1.1",
     "body-parser": "^1.19.0",
@@ -37,6 +39,7 @@
     "chai-as-promised": "^7.1.1",
     "ethers": "^4.0.27",
     "express": "^4.17.1",
+    "ganache-cli": "^6.9.1",
     "sleep": "^6.1.0"
   }
 }
