--- a/packages/BackendAPI/packages/SmartContracts/truffle/package.json
+++ b/packages/BackendAPI/packages/SmartContracts/truffle/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "truffle test"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
     "chai-as-promised": "^7.1.1",
     "ethereumjs-util": "^6.2.0",
     "ethers": "^4.0.45",
+    "lerna": "^3.20.2",
     "openzeppelin-solidity": "^2.5.0",
     "sleep": "^6.1.0"
   }
