Adding geth configuration, ready for npm publish

--- a/packages/HydroMetaTxAPI/package.json
+++ b/packages/HydroMetaTxAPI/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "metacash",
-  "version": "1.4.0",
-  "description": "Metacash JS library",
+  "name": "hydro-meta-tx-api",
+  "version": "0.0.1",
+  "description": "Hydro Meta Transactions",
   "main": "lib/index.js",
   "scripts": {
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
@@ -12,14 +12,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://gitlab.com/lamarkaz/metacash.js.git"
+    "url": "git+https://github.com/robertmagier/hydro-meta-tx.git"
   },
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://gitlab.com/lamarkaz/metacash.js/issues"
+    "url": "https://github.com/robertmagier/hydro-meta-tx/issues"
   },
-  "homepage": "https://gitlab.com/lamarkaz/metacash.js#readme",
+  "homepage": "https://github.com/robertmagier/hydro-meta-tx#readme",
   "devDependencies": {
     "nodemon": "^2.0.2",
     "prettier": "^1.17.0",
@@ -37,7 +37,7 @@
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "ethers": "^4.0.27",
+    "ethers": "^4.0.45",
     "express": "^4.17.1",
     "ganache-cli": "^6.9.1",
     "sleep": "^6.1.0",
