--- a/packages/SmartContracts/package.json
+++ b/packages/SmartContracts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "meta-tx",
+  "name": "hydro-meta-tx-smartcontract",
   "version": "1.0.0",
   "description": "",
   "main": "truffle-config.js",
@@ -7,24 +7,29 @@
     "test": "test"
   },
   "scripts": {
-    "test": "truffle test"
+    "test": "truffle test test/1_FactoryDeploy.js",
+    "geth": "geth --dev js ./test/geth_script.js",
+    "build": "truffle compile"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/robertmagier/meta-tx.git"
+    "url": "git+https://github.com/robertmagier/hydro-meta-tx.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/robertmagier/meta-tx/issues"
+    "url": "https://github.com/robertmagier/hydro-meta-tx/issues"
   },
-  "homepage": "https://github.com/robertmagier/meta-tx#readme",
+  "homepage": "https://github.com/robertmagier/hydro-meta-tx#readme",
   "dependencies": {
+    "axios": "^0.19.2",
     "bignumber.js": "^9.0.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "ethereumjs-util": "^6.2.0",
     "ethers": "^4.0.45",
+    "geth": "^0.4.0",
+    "hydro-meta-tx-api": "0.0.1",
     "lerna": "^3.20.2",
     "openzeppelin-solidity": "^2.5.0",
     "sleep": "^6.1.0",
