--- a/packages/HydroMetaTx/package.json
+++ b/packages/HydroMetaTx/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "hydro-meta-tx-api",
+  "name": "hydro-meta-tx",
   "version": "0.0.1",
   "description": "Hydro Meta Transactions",
-  "main": "lib/index.js",
+  "main": "index.js",
   "scripts": {
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "lint": "tslint -p tsconfig.json",
