--- a/packages/SmartContracts/package.json
+++ b/packages/SmartContracts/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "test": "truffle test test/1_FactoryDeploy.js",
     "geth": "geth --dev js ./test/geth_script.js",
-    "build": "truffle compile"
+    "build": "truffle compile",
+    "relayer": "nodemon -w ../HydroMetaTx/src scripts/startRelayer.js "
   },
   "repository": {
     "type": "git",
@@ -29,7 +30,7 @@
     "ethereumjs-util": "^6.2.0",
     "ethers": "^4.0.45",
     "geth": "^0.4.0",
-    "hydro-meta-tx-api": "0.0.1",
+    "hydro-meta-tx": "0.0.1",
     "lerna": "^3.20.2",
     "openzeppelin-solidity": "^2.5.0",
     "sleep": "^6.1.0",
