--- a/packages/HydroMetaTx/package.json
+++ b/packages/HydroMetaTx/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hydro-meta-tx",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Hydro Meta Transactions",
   "main": "index.js",
   "scripts": {
@@ -30,13 +30,15 @@
     "typescript": "^3.4.5"
   },
   "files": [
-    "lib/**/*"
+    "lib/**/*",
+    "src/**/*"
   ],
   "dependencies": {
     "@types/express": "^4.17.3",
     "axios": "^0.18.1",
     "bignumber.js": "^8.1.1",
     "body-parser": "^1.19.0",
+    "bunyan": "^1.8.12",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "ethers": "^4.0.45",
