--- a/packages/SmartContracts/package.json
+++ b/packages/SmartContracts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hydro-meta-tx-smartcontract",
+  "name": "smartcontract",
   "version": "1.0.0",
   "description": "",
   "main": "truffle-config.js",
@@ -10,7 +10,7 @@
     "test": "truffle test test/1_FactoryDeploy.js",
     "geth": "geth --dev js ./test/geth_script.js",
     "build": "truffle compile",
-    "relayer": "nodemon -w ../HydroMetaTx/src scripts/startRelayer.js "
+    "relayer": "nodemon -w ../HydroMetaTx/lib scripts/startRelayer.js|bunyan "
   },
   "repository": {
     "type": "git",
@@ -25,12 +25,13 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bignumber.js": "^9.0.0",
+    "bunyan": "^1.8.12",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "ethereumjs-util": "^6.2.0",
     "ethers": "^4.0.45",
     "geth": "^0.4.0",
-    "hydro-meta-tx": "0.0.1",
+    "hydro-meta-tx": "0.0.3",
     "lerna": "^3.20.2",
     "openzeppelin-solidity": "^2.5.0",
     "sleep": "^6.1.0",
