--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ cache:
     - $(npm config get prefix)/lib/node_modules # globally installed stuff (i.e. lerna)
 
 script:
+  - npm run ci
   - lerna run test --stream
 
 # notifications:
