--- a/package.json
+++ b/package.json
@@ -6,5 +6,10 @@
   },
   "scripts": {
     "ci": "./scripts/ci.sh"
+  },
+  "dependencies": {
+    "ethers": "^4.0.45",
+    "express": "^4.17.1",
+    "hydro-meta-tx": "0.0.5"
   }
 }
