--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "root",
   "private": true,
   "devDependencies": {
-    "lerna": "^3.19.0"
+    "lerna": "^3.19.0",
+    "why-is-node-running": "^2.1.2"
   },
   "scripts": {
     "ci": "./scripts/ci.sh"
@@ -10,6 +11,7 @@
   "dependencies": {
     "ethers": "^4.0.45",
     "express": "^4.17.1",
-    "hydro-meta-tx": "0.0.5"
+    "hydro-meta-tx": "^0.1.1",
+    "sleep": "^6.1.0"
   }
 }
